# rust

./: .gitignore  package.sh
guess/: Cargo.toml
guess/src/: main.rs
kwindex/: Cargo.toml  README.md  assignment.md
kwindex/examples/: demo.rs
kwindex/src/: lib.rs
kwindex/tests/: unit_tests.rs
modexp/: Cargo.toml  README.md
modexp/src/: main.rs
notes/: Cargo.toml
notes/src/: main.rs
rsa/: Cargo.toml  README.md  id_rsa  id_rsa.pub
rsa/examples/: demo.rs
rsa/src/: lib.rs  main.rs
rsa/tests/: rng_tests.rs  unit_tests.rs
unique/: Cargo.toml  README.md
unique/examples/: demo.rs
unique/src/: lib.rs
