[package]
name = "rsa"
version = "1.0.0"
authors = ["dmitri-mcguckin <dmitri.mcguckin26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
toy_rsa_lib = { git = 'https://github.com/pdx-cs-rust/toy-rsa-lib' }
